@@ -2,6 +2,10 @@ yle-dl - download videos from Yle servers
 Copyright 2009-2019 Antti Ajanki
 Distributed under the GPL v3
 
+<unreleased>
+
+- Handle various corner cases better in the title extraction
+
 Version 20191022
 
 - Make --destdir and -o work together
